syntax = "proto3";

package question3;

import "google/api/annotations.proto"; // This is required for HTTP annotations

option go_package = "./question3";

service BeefService {
  rpc GetSummary(SummaryRequest) returns (SummaryResponse) {
    option (google.api.http) = {
      get: "/v1/summary"
    };
  }
}

message SummaryRequest {}

message SummaryResponse {
  map<string, int32> beef = 1;
}
